# ml-project-taxi-prediction

./: .gitignore  CLUSTERING_LABEL_ENCODING.ipynb  EDA.ipynb  FEATURE_ENCODING.ipynb  MODEL.ipynb  Model.ipynb  POLYLINE.ipynb  PREPROCESSING.ipynb  README.md  preprocessing.py  pyproject.toml  utils.py
.github/workflows/: ci.yaml  release.yaml
infrastructure/sagemaker_config/: main.tf  terraform.tfstate.backup  variables.tf
ml_pipeline/: main.tf
ml_pipeline/glue/crawler/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
ml_pipeline/glue/job/: intial-processing.py  main.tf  preprocessing_etl.py  terraform.tfstate  terraform.tfstate.backup  variables.tf
ml_pipeline/glue/trigger/: main.tf
ml_pipeline/glue/variables/: main.tf  variables.tf
ml_pipeline/sagemaker_pipeline/sagemaker_processing/: pipeline.py
notebooks/: CLUSTERING_LABEL_ENCODING.ipynb  EDA.ipynb  EDA_new.ipynb  FEATURE_ENCODING.ipynb  MODEL.ipynb  PREPROCESSING.ipynb
scripts/: uplaod-to-s3.sh
scripts/sagemaker_instance/: autostop.py  sm-autostop.sh
src/: preprocessing.py
src/preprocessing/: __init__.py  data_cleaning.py  geo_spatial.py  preprocess_data.py  preprocessing.py  setup.py  utils.py
src/utils/: utils.py
tests/unit_tests/: test_distances.py
