[tool.poetry]
name = "thinktank-casestudy"
version = "0.1.0"
description = "A casestudy"
authors = ["Julia Hehl <julia.hehl@bmw.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.9,<3.13"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
