[tool.poetry]
name = "thinktank-casestudy"
version = "0.1.0"
description = "A casestudy"
authors = ["Julia Hehl <julia.hehl@bmw.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.9,<3.13"
pandas = "^2.1.1"
polars = "^0.19.7"
scikit-learn = "^1.3.2"
pytest = "^7.4.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend= "poetry.core.masonry.api"
