[tool.poetry]
name = "thinktank-casestudy"
version = "0.1.0"
description = "A casestudy"
authors = ["Julia Hehl <julia.hehl@bmw.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.9,<3.13"
pandas = "^2.1.1"
polars = "^0.19.7"
scikit-learn = "^1.3.2"
pytest = "^7.4.3"
numpy = "^1.26.2"
datetime = "^5.3"
awswrangler = "^3.4.2"
shapely = "^2.0.2"
geojson = "^3.1.0"
imblearn = "^0.0"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
pyspark = "^3.5.0"
boto3 = "^1.29.2"
logging = "^0.4.9.6"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend= "poetry.core.masonry.api"
